--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,6 +24,14 @@
     // "ghcr.io/bartventer/arch-devcontainer-features/common-utils:1": {},
     "ghcr.io/nils-geistmann/devcontainers-features/zsh:0": {},
     "ghcr.io/devcontainers-extra/features/zsh-plugins:0": {}
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "Orta.vscode-jest",
+        "firsttris.vscode-jest-runner"
+      ]
+    }
   }
 
   // Features to add to the dev container. More info: https://containers.dev/features.
